--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -23,13 +23,11 @@
 
     <dependencies>
 
-        <!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
         <dependency>
-            <groupId>net.sf.saxon</groupId>
-            <artifactId>Saxon-HE</artifactId>
-            <version>9.4</version>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.2</version>
         </dependency>
-
 
 
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
